[package]
name = "to-socket-addrs"
version = "0.1.0"
edition = "2021"
authors = [ "Sergey V. Kokorin <nvksv@nvksv.ru>" ]
description = "A small std::net::ToSocketAddrs replacement to specify addresses without port"
repository = "https://github.com/nvksv/to-socket-addrs/"
homepage = "https://github.com/nvksv/to-socket-addrs/"
documentation = "https://docs.rs/to-socket-addrs/"
readme = "README.md"
license = "MIT"
keywords = ["tosocketaddrs", "socketaddr"]
categories = [ "network-programming" ]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
maybe-async = { path = "../maybe-async-rs", package = "maybe-async" }
async-std = { version = "^1.10.0", optional = true }

[dev-dependencies]
async-attributes = "1.1.2"
# env_logger = "^0.9.0"
# pretty_assertions = "^1.0.0"
# rand = "^0.8.4"
# serial_test = "^0.5.1"

[features]
default = ["sync", "async"]

sync = []
async = ["dep:async-std"]